# GPUFleet

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4c941b389965_baseline_schema.py  51e0a296f5bf_snapshot_hot_metric_columns.py  6ff2b3201ad0_high_density_sampling_schema.py  fd7b3f33e9ab_task_log_truncation_columns.py
app/: __init__.py  background.py  config.py  db.py  deps.py  errors.py  logging_config.py  main.py  metrics.py  review.py  schemas.py  security.py  task_utils.py  webhook.py
app/routers/: admin_alerts.py  admin_auth.py  admin_dashboard.py  admin_nodes.py  admin_observability.py  admin_tasks.py  node_api.py
app/services/: admin_nodes_service.py  admin_tasks_service.py  cursor_pagination.py  node_runtime_service.py  task_state.py
frontend/: .prettierignore  .stylelintrc.cjs  .stylelintrc.full.cjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/scripts/: generate-openapi-types.mjs  lint-colors.mjs
frontend/src/: App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.generated.ts  types.ts
frontend/src/features/alerts/: AlertsBell.tsx
frontend/src/features/auth/: LoginScreen.module.css  LoginScreen.tsx
frontend/src/features/nodes/: FleetView.module.css  FleetView.tsx  NodeCreatePanel.tsx  NodeDetailView.module.css  NodeDetailView.tsx  (+5 more)
frontend/src/lib/: auth.ts  copy.ts  format.ts  i18n.ts  labels.test.ts  labels.ts  listMerge.ts  lttb.test.ts  lttb.ts  routing.test.ts  routing.ts  timeRange.test.ts  timeRange.ts  timeWindow.ts  useSmoothFeeder.test.ts  useSmoothFeeder.ts
frontend/src/shell/: AppShell.module.css  AppShell.tsx
frontend/src/state/: ConsoleStore.test.tsx  ConsoleStore.tsx
frontend/src/styles/: animations.css  base.css  tokens.css
frontend/src/ui/: AnimatedNumber.tsx  ArcGauge.tsx  BlockProgress.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  CodeBlock.module.css  CodeBlock.tsx  CommandPalette.tsx  ConfirmDialog.module.css  ConfirmDialog.test.tsx  ConfirmDialog.tsx  DeltaBadge.tsx  Dropdown.tsx  EmptyState.module.css  EmptyState.tsx  ErrorBoundary.tsx  Gauge.module.css  Gauge.tsx  GpuHeatCells.tsx  GpuUtilGauge.tsx  KpiTile.tsx  LinearStepper.tsx  MetricTile.tsx  MiniSparkline.tsx  Motion.tsx  ParticleField.module.css  ParticleField.tsx  PipelineBar.tsx  RingGauge.tsx  Skeleton.module.css  Skeleton.tsx  StatusPill.module.css  StatusPill.tsx  Tabs.module.css  Tabs.tsx  TempColorBand.tsx  TimeRangePicker.tsx  Toast.module.css  (+3 more)
node_agent/: .env.example  .env.local-test.example  README.md  install.ps1  install.sh  pyproject.toml
node_agent/configs/: modal_credentials.example.json  node.linux_server.env.example  node.modal_runner.env.example  node.windows_server.env.example
node_agent/src/gpufleet_node_agent/: __init__.py  api_client.py  cli.py  collect.py  config.py  execution.py  fingerprint.py  heartbeat.py  main.py  modal_support.py  sampler.py  security.py  state.py  task_runner.py
node_agent/src/gpufleet_node_agent/runner/: __init__.py  artifact.py  dispatcher.py  executor.py  log_pump.py
node_agent/templates/modal/: modal_base_ml_template.py
tests/: conftest.py  test_alembic_migrations.py  test_api_v1_routing.py  test_artifact_upload.py  test_auth.py  test_config_security.py  test_cursor_pagination.py  test_db_pragmas.py  test_error_responses.py  test_fingerprint_refresh.py  test_health.py  test_heartbeat_high_density_sampling.py  test_log_rotation.py  test_logging_config.py  test_metrics.py  test_node_agent_api_client.py  test_node_agent_cli.py  test_node_agent_config.py  test_node_agent_executor.py  test_node_agent_heartbeat.py  test_node_agent_log_ack.py  test_node_agent_sampler.py  test_node_agent_secret_storage.py  test_node_onboarding_lifecycle.py  test_node_signing_key_storage.py  test_node_status_hot_columns.py  test_nonce_replay_protection.py  test_retention.py  test_review.py  test_security_controls.py  test_status_history_time_range.py  test_task_claim_concurrency.py  test_task_result_idempotency.py  test_task_type_whitelist.py  test_tasks.py  test_webhook.py
(+17 files in other folders)
