[project]
name = "gpufleet"
version = "0.1.0"
description = "Lightweight control plane for heterogeneous GPU nodes."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "PyJWT>=2.8,<3.0",
  "passlib>=1.7,<2.0",
  "slowapi>=0.1.9,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers"]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]
