[project]
name = "gpufleet"
version = "0.1.0"
description = "Lightweight control plane for heterogeneous GPU nodes."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "PyJWT>=2.8,<3.0",
  "passlib>=1.7,<2.0",
  "slowapi>=0.1.9,<1.0",
  "requests>=2.34.2",
  "prometheus-client>=0.20,<1.0",
  "structlog>=24.0,<26.0",
  "alembic>=1.18.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers"]

[dependency-groups]
dev = [
    "psutil>=5.9,<7.0",
    "pynvml>=11.5,<13.0",
    "pyright>=1.1.409",
    "ruff>=0.15.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["F"]

[tool.pyright]
include = ["app", "node_agent/src/gpufleet_node_agent"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
reportMissingImports = false
reportMissingModuleSource = false
reportAttributeAccessIssue = false
reportIndexIssue = false
reportArgumentType = false
reportReturnType = false
reportOperatorIssue = false
reportOptionalOperand = false
